WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48070
[Qt] When doing rendering through tiling, it seems the tiles are not initialized before rendering
https://bugs.webkit.org/show_bug.cgi?id=48070
Summary
[Qt] When doing rendering through tiling, it seems the tiles are not initiali...
Benjamin Poulain
Reported
2010-10-21 08:29:43 PDT
Created
attachment 71441
[details]
Simple application showing the issue When a page is not defining a background color, the rendering of the background is incorect when tiling is used. The attached file show a page not rendered correctly when tiling is enabled.
Attachments
Simple application showing the issue
(429 bytes, text/plain)
2010-10-21 08:29 PDT
,
Benjamin Poulain
no flags
Details
Patch
(3.24 KB, patch)
2010-10-21 10:17 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch
(3.24 KB, patch)
2010-10-21 11:48 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-10-21 10:17:27 PDT
Created
attachment 71453
[details]
Patch
Noam Rosenthal
Comment 2
2010-10-21 11:48:26 PDT
Created
attachment 71465
[details]
Patch Right now it's too complicated to autotest TBS. it's a whole different task that's mutually exclusive from this fix.
Simon Hausmann
Comment 3
2010-10-21 13:06:27 PDT
Comment on
attachment 71465
[details]
Patch Good catch. One more of these cases where QPixmap's lack of default-initialization bites us somewhat.
WebKit Commit Bot
Comment 4
2010-10-21 13:31:28 PDT
Comment on
attachment 71465
[details]
Patch Clearing flags on attachment: 71465 Committed
r70262
: <
http://trac.webkit.org/changeset/70262
>
WebKit Commit Bot
Comment 5
2010-10-21 13:31:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug