2010-10-21  No'am Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] When doing rendering through tiling, it seems the tiles are not initialized before rendering
        https://bugs.webkit.org/show_bug.cgi?id=48070

        No new tests. Auto-tests for Tiled Backing Store should be added, see bug 48082

        * page/Frame.cpp:
        (WebCore::Frame::tiledBackingStoreBackgroundColor):
        * page/Frame.h:
        * platform/graphics/TiledBackingStoreClient.h:
        * platform/graphics/qt/TileQt.cpp:
        (WebCore::Tile::updateBackBuffer):

Canonical link: https://commits.webkit.org/60813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70262 268f45cc-cd09-0410-ab3c-d52691b4dbfc