WebCore/page/Frame.h
@@ -237,6 +237,7 @@ namespace WebCore {
         virtual void tiledBackingStorePaintEnd(const Vector<IntRect>& paintedArea);
         virtual IntRect tiledBackingStoreContentsRect();
         virtual IntRect tiledBackingStoreVisibleRect();
+        virtual Color tiledBackingStoreBackgroundColor() const;
 
         OwnPtr<TiledBackingStore> m_tiledBackingStore;
 #endif
